修复了一些BUG，添加了注释和一些功能